# Algoritmos2025

./: .env  Menu.py  main.py  pyproject.toml
Algoritmos/: coordenadas_gifs.py
Dominio/: Chat.py  Modelos.py  Pedidos.py  Reparto.py  Rutas.py
