[project]
name = "obligatorioalgoritmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "osmnx>=1.9.0",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.4.0",
]
